feat: add user `auth` with `jwt token`
