# src/docs/swagger.json
@@ -4,6 +4,45 @@
         "contact": {}
     },
     "paths": {
+        "/auth/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login user",
+                "parameters": [
+                    {
+                        "description": "Login credentials",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.LoginRequestDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/icomphub-api_dtos.Response-string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/icomphub-api_dtos.Response-any"
+                        }
+                    }
+                }
+            }
+        },
         "/class_groups": {
             "get": {
                 "produces": [
@@ -594,6 +633,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -842,7 +886,13 @@
                 "error_finding_class_group",
                 "error_creating_class_group",
                 "error_updating_class_group",
-                "error_deleting_class_group"
+                "error_deleting_class_group",
+                "login_failed",
+                "login_success",
+                "auth_missing_token",
+                "auth_expired_token",
+                "role_access_denied",
+                "role_insufficient"
             ],
             "x-enum-varnames": [
                 "UnknowError",
@@ -894,7 +944,13 @@
                 "ErrorFindingClassGroup",
                 "ErrorCreatingClassGroup",
                 "ErrorUpdatingClassGroup",
-                "ErrorDeletingClassGroup"
+                "ErrorDeletingClassGroup",
+                "LoginFailed",
+                "LoginSuccess",
+                "AuthMissingToken",
+                "AuthExpiredToken",
+                "RoleAccessDenied",
+                "RoleInsufficient"
             ]
         },
         "dtos.ClassGroupCreateRequestDTO": {
@@ -938,6 +994,21 @@
                     "type": "string"
                 },
                 "slug": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.LoginRequestDTO": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
@@ -1465,6 +1536,36 @@
                     "type": "boolean"
                 }
             }
+        },
+        "icomphub-api_dtos.Response-string": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/codes.Code"
+                        }
+                    ],
+                    "example": "USER_CREATED"
+                },
+                "data": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "User created successfully"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
