# src/routes/user_routes.go
@@ -2,13 +2,14 @@ package routes
 
 import (
 	"icomphub-api/controllers"
+	"icomphub-api/middlewares"
 
 	"github.com/gin-gonic/gin"
 )
 
 func RegisterUserRoutes(rg *gin.RouterGroup, userController *controllers.UserController) {
 	userRoute := rg.Group("/users")
-	userRoute.GET("/", userController.GetAll)
+	userRoute.GET("/", middlewares.AuthMiddleware(), middlewares.RoleMiddleware("admin"), userController.GetAll)
 	userRoute.GET("/:id", userController.Find)
 	userRoute.POST("/", userController.Create)
 	userRoute.PUT("/:id", userController.Update)
